--- a/client/src/pages/Register.module.css
+++ b/client/src/pages/Register.module.css
@@ -11,8 +11,8 @@
 
 /* Cuadrado azul con esquinas redondeadas para el icono */
 .iconContainer {
-  width: 120px;
-  height: 120px;
+  width: 200px;
+  height: 200px;
   background-color: #294D67;
   border-radius: 20px;
   display: flex;
@@ -132,4 +132,24 @@
 
 .loginButton:hover {
   opacity: 0.9;
+}
+
+.navContainer {
+  position: absolute;
+  top: 60px;
+  left: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  z-index: 999; /* Para que quede por encima del contenido */
+}
+
+
+.mainContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding-top: 10px; /* espacio para el nav */
 }
