--- a/client/src/pages/AccessLoader.module.css
+++ b/client/src/pages/AccessLoader.module.css
@@ -41,4 +41,40 @@
     text-align: center;
     color: #000;
   }
+
+  .form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
   
+  .field {
+    display: flex;
+    flex-direction: column;
+  }
+  .entrarButton {
+    background-color: #9b1d1d;
+    font-size: 14px;
+    color: white;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 8px;
+    width: 100%;
+    transition: background-color 0.2s ease;
+  }
+  .input {
+    font-size: 14px;
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    border-radius: 6px; /* Igual que el botón */
+    outline: none;
+    width: 100%;
+    box-sizing: border-box;
+    transition: border-color 0.2s ease;
+  }
+  
+  .input:focus {
+    border-color: #9b1d1d;
+  }
