--- a/client/src/pages/LockOpened.module.css
+++ b/client/src/pages/LockOpened.module.css
@@ -120,6 +120,38 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding-top: 100px; /* para dejar espacio a la navContainer arriba */
+    padding-top: 150px; /* para dejar espacio a la navContainer arriba */
     min-height: 100vh;  /* para que crezca con el contenido */
+  }
+
+  /* SPINNER*/
+  .spinner {
+    width: 14px;
+    height: 14px;
+    border: 2px solid #fff;
+    border-top: 2px solid transparent;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 8px;
+    animation: spin 0.6s linear infinite;
+    vertical-align: middle;
+  }
+  
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  .openButton {
+    background-color: #9b1d1d;
+    font-size: 14px;
+    color: white;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 8px;
+    width: 100%;
+    transition: background-color 0.2s ease;
   }
