--- a/client/src/components/ToggleMenu.module.css
+++ b/client/src/components/ToggleMenu.module.css
@@ -32,6 +32,13 @@
     border-bottom: 1px solid #c4c4c4;
     cursor: pointer;
   }
+
+  .menuItem2 {
+    padding: 10px 0;
+    border-bottom: 1px solid #c4c4c4;
+    border-top: 1px solid #c4c4c4;;
+    cursor: pointer;
+  }
   
   .icon {
     font-size: 1.2rem;
