--- a/client/src/pages/LockOpened.module.css
+++ b/client/src/pages/LockOpened.module.css
@@ -1,5 +1,19 @@
 /* src/pages/LockOpened.module.css */
 
+
+.background {
+  min-height: 100vh;
+  width: 100%;
+  background-image: url('/Background.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 100px; /* si necesitas espacio arriba */
+}
+
 /* Contenedor principal */
 .container {
   display: flex;
