--- a/client/src/pages/Register.module.css
+++ b/client/src/pages/Register.module.css
@@ -6,7 +6,6 @@
   justify-content: center;
   width: 100vw;
   height: 100vh;
-  background-color: #fff;
 }
 
 /* Cuadrado azul con esquinas redondeadas para el icono */
@@ -152,4 +151,17 @@
   justify-content: center;
   height: 100%;
   padding-top: 10px; /* espacio para el nav */
+}
+
+.background {
+  min-height: 100vh;
+  width: 100%;
+  background-image: url('/Background.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 100px; /* si necesitas espacio arriba */
 }
